--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,12 +1,22 @@
 name: Deploy Website 12
 
 on:
+  pull_request:
+    # Enumeration needed to also remove the preview pages on PR close
+    types:
+      - opened
+      - reopened
+      - synchronize
+      - closed
   push:
-    branches: ["main"]
+    branches:
+      - main
+      - agent
   workflow_dispatch:
-  
+
 permissions:
-  contents: read
+  contents: write # to write to github pages branch
+  pull-requests: write # to update comments
   pages: write
   id-token: write
 
@@ -23,12 +33,17 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Setup Pages
-        uses: actions/configure-pages@v5
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
+      - name: Deploy
+        uses: JamesIves/github-pages-deploy-action@v4
+        if: github.ref_name == 'main'
         with:
-          path: './app'
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+          folder: ./app
+          clean-exclude: pr-preview/
+          force: false
+      - name: Deploy preview
+        uses: rossjrw/pr-preview-action@v1
+        if: github.event.pull_request
+        with:
+          source-dir: ./app
+          umbrella-dir: pr-preview
+          action: auto
