--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,4 +1,4 @@
-name: Deploy Website 12
+name: Deploy Website
 
 on:
   pull_request:
@@ -33,6 +33,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      - name: Setup Pages
+        uses: actions/configure-pages@v5
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4
         if: github.ref_name == 'main'
